syntax = "proto3";

package storage;

option go_package = "sut-storage-go/proto";

import "storage/storage.proto";

service StorageService {
    rpc AddFile(stream UploadRequest) returns (UploadResponse) {} 
}